<resources>
    <string name="app_name">SocialBlog</string>
    <string name="login_logo_dis">Logo Login Page</string>
    <string name="email_hint">Your Email....</string>
    <string name="pass_hint">Password....</string>
    <string name="login_btn_txt">Login To Account</string>
    <string name="login_reg_btn_text">Need A New Account</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Setting</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_btn_txt">Already have an Account?</string>
    <string name="reg_pass_text">Password....</string>
    <string name="reg_confirm_pass">Confirm Password....</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hin">Add Discription....</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notificarion_text">Notification</string>
    <string name="bottom_ac_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blog_post_date">Blog Post Date</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
</resources>
